contrast fix

--- a/Assets/CSS/GuitarArcade.css
+++ b/Assets/CSS/GuitarArcade.css
@@ -680,10 +680,11 @@ flex-wrap: wrap;
   font-size: 1em;
   cursor: pointer;
   font-weight: bold;
-  background-color: #ff3030;
-  color: #fff9b0;
+  background-color: #c00000;
+  color: #ffea00;
   text-transform: uppercase;
   transition: all 0.3s ease;
+   border: 2px solid #ffea00;
 min-width: 150px; 
 flex-shrink: 1;
 flex-basis: 200px;
@@ -695,10 +696,11 @@ flex-basis: 200px;
   margin: 15px 1%;
   cursor: pointer;
   font-weight: bold;
-  background-color: #ff3030;
-  color: #fff9b0;
+  background-color: #c00000;
+  color: #ffea00;
   text-transform: uppercase;
   transition: all 0.3s ease;
+     border: 2px solid #ffea00;
 min-width: 150px;
 flex-shrink: 1;
 flex-basis: 200px;
@@ -706,11 +708,13 @@ flex-basis: 200px;
 
 .signup-form input[type="submit"]:hover {
   background-color: #ffea00;
+   border: 2px solid #c00000;
   color: black;
 }
 
 .signup-form input[type="reset"]:hover {
   background-color: #ffea00;
+     border: 2px solid #c00000;
   color: black;
 }
 
